--- a/final-javapoets/pom.xml
+++ b/final-javapoets/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinalframework</groupId>
-        <version>1.2.0-alpha</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
