--- a/final-monitor/pom.xml
+++ b/final-monitor/pom.xml
@@ -50,6 +50,6 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinalframework</groupId>
-        <version>1.2.0-alpha</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
 </project>
