--- a/final-retrofit/pom.xml
+++ b/final-retrofit/pom.xml
@@ -53,7 +53,7 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinalframework</groupId>
-        <version>1.2.0-alpha</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
 
 </project>
