--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <groupId>org.ifinalframework.project</groupId>
         <artifactId>final-project</artifactId>
         <version>1.2.0-SNAPSHOT</version>
-        <!--<relativePath/>&lt;!&ndash; lookup parent from repository &ndash;&gt;-->
+        <relativePath/><!-- lookup parent from repository -->
     </parent>
     <groupId>org.ifinalframework</groupId>
     <artifactId>final-framework</artifactId>
