--- a/final-context/pom.xml
+++ b/final-context/pom.xml
@@ -35,6 +35,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
             <artifactId>validation-api</artifactId>
             <groupId>javax.validation</groupId>
         </dependency>
@@ -51,6 +55,10 @@
             <groupId>com.github.pagehelper</groupId>
             <scope>provided</scope>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
 
