--- a/final-aop/pom.xml
+++ b/final-aop/pom.xml
@@ -2,7 +2,6 @@
 
 <!--
   ~ Copyright 2020-2021 the original author or authors.
-  ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
   ~ You may obtain a copy of the License at
@@ -57,6 +56,6 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinalframework</groupId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
     </parent>
 </project>
