--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,11 @@
     <parent>
         <groupId>org.ifinalframework.project</groupId>
         <artifactId>final-project</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
     </parent>
     <groupId>org.ifinalframework</groupId>
     <artifactId>final-framework</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
 
     <name>final-framework</name>
     <description>Final framework with Spring Boot</description>
@@ -47,7 +47,7 @@
     <properties>
         <lombok.version>1.18.18</lombok.version>
         <dubbo.boot.version>2.7.8</dubbo.boot.version>
-        <final.version>1.2.0-SNAPSHOT</final.version>
+        <final.version>1.2.0</final.version>
         <findbugs-maven-plugin.version>3.0.2</findbugs-maven-plugin.version>
         <guava.version>30.0-jre</guava.version>
         <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
