--- a/final-context/pom.xml
+++ b/final-context/pom.xml
@@ -66,6 +66,6 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinalframework</groupId>
-        <version>1.2.0</version>
+        <version>1.2.1-SNAPSHOT</version>
     </parent>
 </project>
