--- a/final-context/pom.xml
+++ b/final-context/pom.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
+<?xml version="1.0" encoding="UTF-8"?><!--
   ~ Copyright 2020-2021 the original author or authors.
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -14,10 +13,17 @@
   ~ limitations under the License.
   -->
 
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns="http://maven.apache.org/POM/4.0.0"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <artifactId>final-framework</artifactId>
+        <groupId>org.ifinalframework</groupId>
+        <version>1.2.1-alpha</version>
+    </parent>
     <artifactId>final-context</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>org.ifinalframework.annotation</groupId>
@@ -61,11 +67,5 @@
         </dependency>
     </dependencies>
 
-    <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <artifactId>final-framework</artifactId>
-        <groupId>org.ifinalframework</groupId>
-        <version>1.2.1-alpha</version>
-    </parent>
 </project>
