--- a/final-dubbo/pom.xml
+++ b/final-dubbo/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinalframework</groupId>
-        <version>1.2.1-alpha</version>
+        <version>1.2.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
