--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.ifinalframework.project</groupId>
         <artifactId>final-project</artifactId>
-        <version>1.2.1-alpha</version>
+        <version>1.2.1-SNAPSHOT</version>
     </parent>
     <groupId>org.ifinalframework</groupId>
     <artifactId>final-framework</artifactId>
@@ -46,7 +46,7 @@
 
     <properties>
         <dubbo.boot.version>2.7.8</dubbo.boot.version>
-        <final.version>1.2.1-alpha</final.version>
+        <final.version>1.2.1-SNAPSHOT</final.version>
         <findbugs-maven-plugin.version>3.0.2</findbugs-maven-plugin.version>
         <guava.version>30.0-jre</guava.version>
         <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
