--- a/final-context/pom.xml
+++ b/final-context/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinalframework</groupId>
-        <version>1.2.1-SNAPSHOT</version>
+        <version>1.2.1</version>
     </parent>
     <artifactId>final-context</artifactId>
 
