--- a/final-core/pom.xml
+++ b/final-core/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinalframework</groupId>
-        <version>1.2.1-SNAPSHOT</version>
+        <version>1.2.1</version>
     </parent>
 
     <artifactId>final-core</artifactId>
