--- a/final-retrofit/pom.xml
+++ b/final-retrofit/pom.xml
@@ -52,7 +52,7 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinalframework</groupId>
-        <version>1.2.1-SNAPSHOT</version>
+        <version>1.2.1</version>
     </parent>
 
 </project>
