--- a/final-web/pom.xml
+++ b/final-web/pom.xml
@@ -74,6 +74,6 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinalframework</groupId>
-        <version>1.2.1-SNAPSHOT</version>
+        <version>1.2.1</version>
     </parent>
 </project>
