--- a/final-aop/pom.xml
+++ b/final-aop/pom.xml
@@ -56,6 +56,6 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinalframework</groupId>
-        <version>1.2.2-SNAPSHOT</version>
+        <version>1.2.2</version>
     </parent>
 </project>
