--- a/final-monitor/pom.xml
+++ b/final-monitor/pom.xml
@@ -49,6 +49,6 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinalframework</groupId>
-        <version>1.2.2</version>
+        <version>1.2.3-SNAPSHOT</version>
     </parent>
 </project>
