add final-annotation-web module

--- a/final-web/pom.xml
+++ b/final-web/pom.xml
@@ -66,6 +66,10 @@
             <groupId>org.ifinalframework.auto</groupId>
         </dependency>
         <dependency>
+            <groupId>org.ifinalframework.annotation</groupId>
+            <artifactId>final-annotation-web</artifactId>
+        </dependency>
+        <dependency>
             <artifactId>final-json</artifactId>
             <groupId>org.ifinalframework</groupId>
         </dependency>
