--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify -Pci org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+        run: mvn -B verify -Pci org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -U
 
 
