--- a/final-java/pom.xml
+++ b/final-java/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinalframework</groupId>
-        <version>1.2.3-SNAPSHOT</version>
+        <version>1.2.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -67,12 +67,6 @@
             <groupId>org.benf</groupId>
             <artifactId>cfr</artifactId>
             <version>0.150</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-            <optional>true</optional>
         </dependency>
     </dependencies>
 </project>
