--- a/final-dubbo/pom.xml
+++ b/final-dubbo/pom.xml
@@ -83,6 +83,7 @@
         <dependency>
             <groupId>org.ifinalframework.auto</groupId>
             <artifactId>auto-service</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
