--- a/final-core/pom.xml
+++ b/final-core/pom.xml
@@ -40,6 +40,10 @@
             <groupId>org.apache.velocity.tools</groupId>
         </dependency>
         <dependency>
+            <groupId>org.ifinalframework</groupId>
+            <artifactId>final-json</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.squareup</groupId>
             <artifactId>javapoet</artifactId>
         </dependency>
