--- a/final-core/pom.xml
+++ b/final-core/pom.xml
@@ -69,6 +69,11 @@
             <groupId>org.benf</groupId>
             <artifactId>cfr</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>2.1.3</version>
+        </dependency>
     </dependencies>
 
     <url>https://github.com/final-projects/final-framework</url>
