--- a/final-web/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/final-web/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -6,14 +6,14 @@
       "name": "final.web.response.advice.result",
       "type": "java.lang.Boolean",
       "description": "启用 ResultResponseBodyAdvice.",
-      "sourceType": "org.ifinalframework.web.response.advice.ResultResponseBodyAdvice",
+      "sourceType": "org.ifinalframework.web.servlet.response.advice.ResultResponseBodyAdvice",
       "defaultValue": "true"
     },
     {
       "name": "final.web.response.advice.responsible",
       "type": "java.lang.Boolean",
       "description": "启用 ResponsibleResponseBodyAdvice.",
-      "sourceType": "org.ifinalframework.web.response.advice.ResponsibleResponseBodyAdvice",
+      "sourceType": "org.ifinalframework.web.servlet.response.advice.ResponsibleResponseBodyAdvice",
       "defaultValue": "true"
     }
   ]
