--- a/final-monitor/pom.xml
+++ b/final-monitor/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright 2020-2021 the original author or authors.
+  ~ Copyright 2020-2022 the original author or authors.
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
   ~ You may obtain a copy of the License at
@@ -22,7 +22,7 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinalframework</groupId>
-        <version>1.2.4-SNAPSHOT</version>
+        <version>1.2.4</version>
     </parent>
 
     <packaging>jar</packaging>
