--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,6 @@
                 <artifactId>final-json</artifactId>
                 <version>1.3.3-SNAPSHOT</version>
             </dependency>
-
             <dependency>
                 <artifactId>final-dubbo</artifactId>
                 <groupId>org.ifinalframework</groupId>
@@ -149,6 +148,11 @@
             <dependency>
                 <artifactId>final-monitor</artifactId>
                 <groupId>org.ifinalframework</groupId>
+                <version>1.3.3-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ifinalframework</groupId>
+                <artifactId>final-security</artifactId>
                 <version>1.3.3-SNAPSHOT</version>
             </dependency>
             <dependency>
